--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">LOGO</div>
+    <<div class="logo"><img src="logo.jpg" alt="Logo" height="40"></div>
 
     <div class="nav-actions">
       <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">🌙</button>
