--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo.jpg" alt="Logo" height="40">
-    </div>
+      <img src="logo.jpg" alt="Logo SALAM" height="40">
+   </div>
 
     <div class="nav-actions">
       <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">🌙</button>
