--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="../logo.png" alt="Logo s" height="40">
+      <img src="logo.png" alt="Logo s" height="40">
    </div>
 
     <div class="nav-actions">
