--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -9,8 +10,8 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo.png" alt="Logo SALAM" height="40">
-   </div>
+      <img src="logo.png" alt="Logo SALAM" height="40" />
+    </div>
 
     <div class="nav-actions">
       <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">🌙</button>
