--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo-salam.png" alt="Logo SALAM" height="40">
+      <div class="logo">SALAM</div>
     </div>
 
     <div class="nav-actions">
