--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <div class="logo">SALAM</div>
+      <div class="logo">SALAM FX</div>
     </div>
 
     <div class="nav-actions">
