--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <div class="logo">SALAM FX</div>
+      <img src="salamsite-logo.png" alt="Logo SALAM" height="40">
     </div>
 
     <div class="nav-actions">
